2007-05-22  Eitan Isaacson  <eitan@ascender.com>

	* configure.in:
	* plugins/script_recorder.py:
	* src/lib/accerciser/Makefile.am:
	* src/lib/accerciser/accerciser.py:
	* src/lib/accerciser/message.py:
	* src/lib/accerciser/plugin.py:
	* src/lib/accerciser/plugin:
	* src/lib/accerciser/plugin/Makefile.am:
	* src/lib/accerciser/plugin/__init__.py:
	* src/lib/accerciser/plugin/base_plugin.py:
	* src/lib/accerciser/plugin/message.py:
	* src/lib/accerciser/plugin/plugin_manager.py:
	* src/lib/accerciser/plugin/view.py:
	* src/lib/accerciser/plugin_manager.py:
	* src/lib/accerciser/view_manager.py: Moved all plugin-related
	code to a seperate package.

	* plugins/script_recorder.py:
	* src/lib/accerciser/Makefile.am:
	* src/lib/accerciser/accerciser.py:
	* src/lib/accerciser/message.py:
	* src/lib/accerciser/plugin.py:
	* src/lib/accerciser/plugin_manager.py:
	* src/lib/accerciser/view_manager.py: Plugin management
	re-factoring. This is a working, intermittent commit 
	before major file renaming.

2007-05-17  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/plugin.py: Epydoced.
	* src/lib/accerciser/tools.py: Epydoced, removed unused Proxy class.

2007-05-16  Eitan Isaacson  <eitan@ascender.com>

	* plugins/console.py: Epydoced.
	* plugins/ipython_view.py: Epydoced.
	* plugins/script_recorder.py: Epydoced.
	
	* plugins/api_view.py: Epydoced.
	* plugins/event_monitor.glade: Reattached signals that got lost.
	* plugins/event_monitor.py:  Epydoced.
	* src/lib/accerciser/pyatspi.zip: Updated to revision 927.

2007-05-15  Eitan Isaacson  <eitan@ascender.com>
	
	* plugins/interface_view.py: Epydoced.
	
	* plugins/event_monitor.glade:
	* plugins/event_monitor.py: Fixed event filtering (bug 438622).

2007-05-14  Eitan Isaacson  <eitan@ascender.com>

	* README: Bumped to version 0.1.3
	* configure.in: Bumped to version 0.1.3
	* debian/changelog: Bumped to version 0.1.3
	* help/C/accerciser.xml: Changed console example to pyatspi (bug 438056)
