@@ -1,5 +1,9 @@
 2007-05-22  Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/accerciser.py: 
+	* src/lib/accerciser/plugin/view.py: Skip over invisible tabs
+	when focusing with alt-<num>.
+	
 	* configure.in:
 	* plugins/script_recorder.py:
 	* src/lib/accerciser/Makefile.am:
